# frz

./: .gitignore  .gitmodules  3.patch  AGENTS.md  Cargo.toml  README.md  flake.nix
crates/cli/: Cargo.toml
crates/cli/tests/: kitty_desktop_preview_artifact.rs
crates/core/: Cargo.toml
crates/core/src/: app_dirs.rs  lib.rs
crates/core/src/filesystem/: mod.rs
crates/core/src/filesystem/indexer/: cache.rs  cached_stream.rs  mod.rs  stream.rs  traversal.rs  update_batcher.rs
crates/core/src/filesystem/search/: data.rs  iteration.rs  mod.rs
crates/core/src/filesystem_indexer/: cache.rs
crates/core/src/search_pipeline/: mod.rs  runtime.rs
crates/frz/: Cargo.toml
crates/frz-cli/: Cargo.toml
crates/frz-cli/src/: main.rs  workflow.rs
crates/frz-core/: Cargo.toml
crates/frz-core/src/: lib.rs  streams.rs
crates/frz-stream/: Cargo.toml
crates/frz-stream/src/: lib.rs
crates/frz-stream/src/search/: channel.rs  mod.rs
crates/frz-tui/src/: actions.rs  builder.rs  highlight.rs  indexing.rs  lib.rs  render.rs  runtime.rs  search.rs
crates/frz/src/: lib.rs
crates/frz/src/features/filesystem_indexer/: cached_stream.rs  mod.rs  traversal.rs
crates/frz/src/features/search_pipeline/: file.rs  fs.rs
crates/frz/src/features/tui_app/: highlight.rs  indexing.rs  input.rs  render.rs  runtime.rs  search.rs
crates/frz/src/features/tui_app/components/: rows.rs
crates/frz/src/features/tui_app/components/preview/: worker.rs
crates/frz/src/features/tui_app/state/: app.rs  search_runtime.rs
crates/frz/src/features/tui_app/style/theme/builtins/: config.rs  loader.rs
crates/frz/src/search/: file.rs  mod.rs  streaming.rs
crates/frz/src/search/runtime/: commands.rs
crates/frz/src/systems/filesystem/: cache.rs  mod.rs
crates/frz/src/systems/filesystem/fs/: mod.rs  update_batcher.rs
crates/frz/src/ui/: indexing.rs  input.rs  mod.rs  search.rs
crates/frz/src/ui/components/: rows.rs  tabs.rs
crates/frz/src/ui/components/preview/: render.rs
crates/frz/src/ui/runtime/: event_loop.rs
crates/frz/src/ui/state/: app.rs  mod.rs
crates/frz/src/ui/style/theme/builtins/: config.rs  mod.rs
crates/frz/src/ui/style/theme/builtins/themes/: sublime-snazzy.toml
crates/integration-tests/: Cargo.toml
crates/integration-tests/tests/: kitty_desktop_preview_artifact.rs
crates/kitty-macro-tests/: Cargo.toml  README.md
crates/kitty-test-harness/: Cargo.toml
crates/plugin-api/: Cargo.toml
crates/plugin-api/capabilities/: mod.rs
crates/plugin-api/src/: capabilities.rs  context.rs  descriptors.rs  error.rs  lib.rs
crates/plugin-api/src/capabilities/: mod.rs  preview_split.rs  search_tabs.rs
crates/plugin-api/src/registry/: plugin.rs  registered_plugin.rs  store.rs  tests.rs
crates/plugin-api/src/search/: aggregator.rs  alphabetical.rs  data.rs  file.rs  mod.rs  stream.rs  streaming.rs
crates/plugin-api/src/types/: facet.rs  file.rs  mod.rs  mode.rs  search_data.rs
crates/plugin-attributes/: Cargo.toml
crates/plugin-facets/: Cargo.toml
crates/plugin-files/: Cargo.toml
crates/plugins/attributes/: Cargo.toml
crates/plugins/attributes/src/: lib.rs
crates/plugins/files/: Cargo.toml
crates/plugins/files/src/: lib.rs
crates/stream/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/docs/: preview-wrapping-lessons.md
crates/tui/src/: actions.rs  builder.rs  config.rs  highlight.rs  input.rs  lib.rs  render.rs  runtime.rs  snapshot_tests.rs
crates/tui/src/app/: actions.rs  mod.rs  state.rs
crates/tui/src/app/indexing/: impl_app.rs  impl_view.rs  mod.rs  tests.rs
crates/tui/src/app/preview/: mod.rs  state.rs
crates/tui/src/app/render/: layout.rs  mod.rs
crates/tui/src/app/results/: mod.rs  state.rs
crates/tui/src/app/search/: coordination.rs  mod.rs  runtime.rs
crates/tui/src/components/: mod.rs  progress.rs  prompt.rs  rows.rs  scrollbar.rs  tables.rs  tabs.rs
crates/tui/src/components/preview/: content.rs  highlight.rs  image.rs  media.rs  mod.rs  pdf.rs  render.rs  worker.rs  wrap.rs
crates/tui/src/components/preview/selection/: clipboard.rs  extract.rs  gutter.rs  highlight.rs  mod.rs  state.rs  tests.rs
crates/tui/src/components/preview/snapshots/: frz_tui__components__preview__wrap__tests__preview_wrap_respects_gutter_and_indent.snap
crates/tui/src/snapshots/: frz_tui__snapshot_tests__preview_wrap_respects_gutter_and_indent.snap
crates/tui/src/state/: app.rs  search_runtime.rs
crates/tui/src/style/: mod.rs
crates/tui/src/style/theme/: mod.rs  registry.rs  types.rs
crates/tui/src/style/theme/builtins/: config.rs  loader.rs  mod.rs
crates/tui/src/tables/: rows.rs
docs/: 2025-10-17_TODO.md  2025-10-17_review.md  ARCHITECTURE.md  TODO.md  kitty-image-artifact-bug.md
docs/architecture/: data-flow-and-patterns.md
examples/: capability_demo.rs  demo.rs  filesystem.rs
nix/: devshell.nix  pkgs.nix  pre-commit.nix  rust.nix  shell.nix  treefmt.nix
nix/modules/: devshell.nix  rust.nix
src/: app.rs  app_dirs.rs  config.rs  indexing.rs  input.rs  lib.rs  logging.rs  main.rs  progress.rs  search.rs  settings.rs  streams.rs  tables.rs  tabs.rs  types.rs  utils.rs  workflow.rs
src/app/: actions.rs  indexing.rs  mod.rs  render.rs  runtime.rs  search.rs  state.rs
src/cli/: annotations.rs  args.rs  mod.rs  output.rs
src/extensions/: mod.rs
src/indexing/: filesystem.rs  filesystem_cache.rs  mod.rs
src/plugins/: context.rs  definition.rs  descriptors.rs  mod.rs  registry.rs
src/previewers/: bat.rs  file.rs  mod.rs
src/search/: aggregator.rs  alphabetical.rs  commands.rs  config.rs  data.rs  file.rs  fs.rs  mod.rs  outcome.rs  plugins.rs  stream.rs  streaming.rs  tuning.rs  worker.rs
src/searcher/: mod.rs
src/settings/: loader.rs  mod.rs  raw.rs  resolved.rs  sources.rs  ui.rs  util.rs
src/systems/: mod.rs
src/theme/: light.rs  mod.rs  slate.rs  solarized.rs
src/tui/: highlight.rs  input.rs  mod.rs
src/types/: facet.rs  file.rs  highlight.rs  mod.rs  search_data.rs  ui.rs
src/ui/: actions.rs  builder.rs  config.rs  highlight.rs  indexing.rs  mod.rs  render.rs  runtime.rs  search.rs  state.rs
(+235 files in other folders)
