[workspace]
members = ["crates/frz-cli", "crates/frz-core", "crates/frz-stream"]
resolver = "2"

[workspace.lints.rust]
missing_docs = "warn"
unused_crate_dependencies = "warn"

[workspace.package]
edition = "2024"
version = "0.5.0"
description = "TUI fuzzy finder revolving around tabular data, utilising Saghen's Frizbee crate for matching"
license = "MIT"
homepage = "https://github.com/Alb-O/frz"
repository = "https://github.com/Alb-O/frz"
authors = ["Albert O'Shea"]
readme = "README.md"

[workspace.dependencies]
frz-core = { path = "crates/frz-core" }
frz-stream = { path = "crates/frz-stream" }
frz-cli = { path = "crates/frz-cli" }
