[package]
name = "frz-cli"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "frz"
path = "src/bin/frz/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
frz-core.workspace = true
frz-tui.workspace = true
serde_json = "1.0"

[lints]
workspace = true
