[package]
name = "frz-core"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0"
dirs = "6.0"
frz-stream.workspace = true
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.23"

[lints]
workspace = true
