[package]
name = "frz"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0"
bat = { version = "0.24", default-features = false, features = ["regex-fancy"] }
dirs = "6.0"
frizbee = { version = "0.6" }
ignore = "0.4"
include_dir = "0.7"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
throbber-widgets-tui = "0.9"
toml = "0.9"
tui-textarea = "0.7"
unicode-truncate = "2"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3.23"

[lints]
workspace = true
