[package]
name = "frz-plugin-api"
version = "0.1.0"
edition = "2024"
authors = ["Albert O'Shea"]
description = "Shared plugin interfaces and data types for frz"
license = "MIT"

[features]
default = []

[dependencies]
anyhow = "1"
frizbee = "0.5"
ignore = "0.4"
ratatui = "0.29"
unicode-truncate = "2.0"
unicode-width = "0.2"
indexmap = "2"
thiserror = "1"

[dependencies.serde]
version = "1"
features = ["derive"]

[dev-dependencies]
serde_json = "1"
tempfile = "3"
