[package]
name = "frz-tui"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
# Enable image/media preview support in the preview pane.
# Adds dependencies for terminal graphics protocols (Sixel, Kitty, iTerm2, halfblocks).
media-preview = ["dep:ratatui-image", "dep:image", "dep:resvg"]

[dependencies]
anyhow = "1.0"
bat = { version = "0.24", default-features = false, features = ["regex-onig"] }
frizbee = { version = "0.6" }
frz-core.workspace = true
frz-stream.workspace = true
image = { version = "0.25", optional = true, default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
include_dir = "0.7"
ratatui = "0.29"
ratatui-image = { version = "7", optional = true, default-features = false, features = ["crossterm"] }
resvg = { version = "0.45", optional = true, default-features = false }
serde = { version = "1.0", features = ["derive"] }
throbber-widgets-tui = "0.9"
toml = "0.9"
tui-textarea = "0.7"
unicode-truncate = "2"
unicode-width = "0.2"

[lints]
workspace = true
