[package]
name = "frz-tui"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
media-preview = [
    "dep:image",
    "dep:resvg",
    "dep:poppler-rs",
    "dep:cairo-rs",
    "dep:infer",
    "dep:ratatui-image",
]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
bat = { version = "0.24", default-features = false, features = ["regex-onig"] }
cairo-rs = { version = "0.21", optional = true }
frizbee = { version = "0.6" }
frz-core.workspace = true
frz-stream.workspace = true
image = { version = "0.25", optional = true, default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
include_dir = "0.7"
infer = { version = "0.19", optional = true }
poppler-rs = { version = "0.25", optional = true }
ratatui = "0.29"
ratatui-image = { version = "8.0", optional = true }
resvg = { version = "0.45", optional = true, default-features = false }
serde = { version = "1.0", features = ["derive"] }
throbber-widgets-tui = "0.9"
toml = "0.9"
tui-textarea = "0.7"
unicode-segmentation = "1.12"
unicode-truncate = "2"
unicode-width = "0.2"

[dev-dependencies]
insta = "1.44"

[lints]
workspace = true
