[package]
name = "frz-plugins-attributes"
version = "0.1.0"
edition = "2024"
authors = ["Albert O'Shea"]
description = "Built-in attribute search plugin for frz"
license = "MIT"

[dependencies]
frz-plugin-api = { path = "../../plugin-api", version = "0.1" }
frz-tui = { path = "../../tui", version = "0.1" }
ratatui = "0.29"
